Resolve code smells (#608)
Co-authored-by: Michael Peels <michaelpeels@Michael-Peels.local>